<resources>
    <string name="app_name">KRISHI_SADAN</string>
    <string name="textview">TextView</string>
    <string name="krishi_sadan">KRISHI SADAN</string>
    <string name="too">ONE SOLUTION FOR EVERY PROBLEM</string>
    <string name="todo3">hello mf home screen</string>
    <string name="enter_phone_number">ENTER PHONE NUMBER</string>
    <string name="enter_password">ENTER PASSWORD</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">sign up</string>
    <string name="welcome_to_the_app2">Welcome To The APP</string>
    <string name="todo4">hello mf signup</string>
    <string name="no_account_yet_create_one">No Account Yet ? Create One</string>
    <string name="no_account_yet_create_one2">No Account Yet Create One</string>
    <string name="no_account_yet_create_one3">No Account Yet? Create One</string>
    <string name="welcome">Welcome</string>
    <string name="ys2">TODO</string>
    <string name="sign_up4">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password12">Password</string>
    <string name="submit">SUBMIT</string>
    <string name="already_a_member_login_here">Already a member?Login Here</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_adress">Enter Email Adress</string>
    <string name="title_activity_beauti">beauti</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome_to_the_mf_app">welcome to the mf app</string>
    <string name="create_account">Create Account</string>
    <string name="menu_drawer_open">Drawer open</string>
    <string name="menu_drawer_closes">Drawer close</string>
    <string name="userimg">TODO</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_designation">Enter your designation</string>
    <string name="backbaby">TODO</string>
    <string name="type_your_message">Type Your Message........</string>
    <string name="sedtodo">TODO</string>
    <string name="todo">TODO</string>
    <string name="crop1">Name</string>
    <string name="todo56">TODO</string>
    <string name="location">Location</string>
    <string name="updated_at">Updated at</string>
    <string name="clear_sky">clear sky</string>
    <string name="_24_c">24°C</string>
    <string name="sunset">Sunset</string>
    <string name="_5_30">5:30</string>
    <string name="humidity">Humidity</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="rahul">Rahul</string>
    <string name="sunrise">Sunrise</string>
    <string name="_5_303">5:30</string>
    <string name="_5_304">5:30</string>
    <string name="wind_speed">Wind speed</string>
    <string name="todo6">TODO</string>
    <string name="information">Information</string>
    <string name="todo5">TODO</string>
    <string name="todo41">TODO</string>
    <string name="_5_302">5:30</string>
    <string name="todo32">TODO</string>
    <string name="_5_301">5:30</string>
    <string name="pressure">Pressure</string>
    <string name="todo2">TODO</string>
    <string name="max_temp">Max temp</string>
    <string name="todo1">TODO</string>
    <string name="min_temp">Min Temp</string>
    <string name="profilesetting">TODO</string>
    <string name="expert_chat">Expert chat</string>
    <string name="profdata">TODO</string>
    <string name="hey_there_i_am_a_qualified_agriculture_expert_n">Hey there I am a qualified Agriculture expert \n</string>
    <string name="chat12">Chat</string>
    <string name="hello">hello</string>
    <string name="kharif_img">TODO</string>
</resources>