<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="start"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Activity.settingProf">


    <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:id="@+id/save"
        android:background="@drawable/save"
        android:padding="@dimen/_5sdp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_gravity="end"
        android:contentDescription="@string/profdata" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_image"
        android:layout_width="@dimen/_100sdp"
        android:layout_gravity="center"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/profile"
        />

    <EditText
        android:id="@+id/setting_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:autofillHints=""
        android:background="@null"
        android:gravity="center"
        android:hint="@string/action_settings"
        android:inputType="textShortMessage"
        android:text="@string/chat12"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/setting_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:autofillHints=""
        android:background="@null"
        android:gravity="center"
        android:hint="@string/hello"
        android:inputType="textLongMessage"
        android:text="@string/hey_there_i_am_a_qualified_agriculture_expert_n"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />


</LinearLayout>