<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"

    tools:context=".Activity.Signup">


    <EditText
        android:id="@+id/textView4"
        android:layout_width="328dp"
        android:layout_height="53dp"
        android:autofillHints=""
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="#040303"
        android:textColorHighlight="#050505"
        android:textColorHint="#0C0909"
        android:textColorLink="#090808"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#040303"
        android:textColorHighlight="#050505"
        android:textColorHint="#0C0909"
        android:textColorLink="#090808"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="413dp"
        android:layout_height="81dp"
        android:fontFamily="@font/alfa_slab_one"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/sign_up4"
        android:textColor="#090000"
        android:textColorHint="#070707"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="329dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColor="#040303"
        android:textColorHighlight="#050505"
        android:textColorHint="#0C0909"
        android:textColorLink="#090808"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="324dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="@string/password12"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#040303"
        android:textColorHighlight="#050505"
        android:textColorHint="#0C0909"
        android:textColorLink="#090808"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="324dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textColor="#040303"
        android:textColorHighlight="#050505"
        android:textColorHint="#0C0909"
        android:textColorLink="#090808"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/deg"
        android:layout_width="324dp"
        android:layout_height="54dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:hint="@string/enter_your_designation"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#040303"
        android:textColorHighlight="#050505"
        android:textColorHint="#0C0909"
        android:textColorLink="#090808"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="345dp"
        android:layout_height="63dp"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/already_a_member_login_here"
        android:textColor="#064C06"
        android:textColorHint="#0C0909"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/profile"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <!--    <Spinner-->
    <!--        android:id="@+id/spinner1"-->
    <!--        android:layout_width="320dp"-->
    <!--        android:layout_height="37dp"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.362"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/phone" />-->


</androidx.constraintlayout.widget.ConstraintLayout>